# python_finance

./: .gitignore  README.md  pyproject.toml  requirements.txt
data/: fr_stock_info.csv  fr_stocks.csv
docs/: 02.analyse_k_line.md  Basic_Finance_term.md
notebooks/: 01.EDA_on_stock_data.ipynb  01.MOMENTUM_Trading_Strategy.ipynb  02.Basics.ipynb  02.Basics_yfinance.ipynb  03.Analyse_French_stocks.ipynb
